--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -20,27 +20,55 @@
         <div class="login-form" style="background-color: #1abc9c">
             <div class="form-group">
                 <label>Software name：</label>
-                <input type="text" class="form-control login-field " value="" placeholder="Enter your software name" required="required" name="softwarename" id="software-name">
+                <div class="btn-group">
+                    <input type="text" class="form-control login-field " value="" placeholder="Enter your software name" required="required" name="softwarename" id="software-name" style="width: 120%">
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Output folder name：</label>
+                <div class="btn-group">
+                    <input type="text" class="form-control login-field " value="" placeholder="Enter your output folder name" required="required" name="outputfoldername" id="outputfolder-name" style="width: 120%">
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Exe name：</label>
+                <div class="btn-group">
+                    <input type="text" class="form-control login-field " value="" placeholder="Enter your exe name" required="required" name="exename" id="exe-name" style="width: 120%">
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Desktop link name：</label>
+                <div class="btn-group">
+                    <input type="text" class="form-control login-field " value="" placeholder="Enter your desktop link name" required="required" name="desktoplinkname" id="desktoplink-name" style="width: 120%">
+                </div>
             </div>
 
             <div class="form-group">
                 <label>Software version：</label>
-                <input type="text" class="form-control login-field " value="" placeholder="Enter your software version" required="required" name="softwareversion" id="software-version">
+                <div class="btn-group">
+                    <input type="text" class="form-control login-field " value="" placeholder="Enter your software version" required="required" name="softwareversion" id="software-version" style="width: 120%">
+                </div>
             </div>
 
             <div class="form-group">
                 <label>Software author：</label>
-                <input type="text" class="form-control login-field" value="" placeholder="Enter your author name" required="required" name="authorname" id="software-author">
+                <div class="btn-group">
+                    <input type="text" class="form-control login-field" value="" placeholder="Enter your author name" required="required" name="authorname" id="software-author" style="width: 120%">
+                </div>
             </div>
 
             <div class="form-group">
                 <label>Email address：</label>
-                <input type="email" class="form-control login-field" value="" placeholder="Enter your email" required="required" name="email" id="software-email">
+                <div class="btn-group">
+                    <input type="email" class="form-control login-field" value="" placeholder="Enter your email" required="required" name="email" id="software-email" style="width: 120%">
+                </div>
             </div>
 
             <div class="form-group">
                 <label>Company：</label>
-                <input type="text" class="form-control login-field" value="" placeholder="Enter your comanpy name" required="required" name="companyname" id="software-company">
+                <div class="btn-group">
+                    <input type="text" class="form-control login-field" value="" placeholder="Enter your comanpy name" required="required" name="companyname" id="software-company" style="width: 120%">
+                </div>
             </div>
 
             <div class="form-group">
