--- a/setuper web app/templates/base.html
+++ b/setuper web app/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico">
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/flat-ui.css" rel="stylesheet">
+    <link href="../static/css/jquery.bxslider.css" rel="stylesheet">
     {% block appcss %}<link href="../static/css/setuper.css" rel="stylesheet">{% end %}
     <script src="../static/js/app/require-setup.js"></script>
     {% block appjs %}<script data-main="../static/js/index" src="static/js/lib/require.min.js"></script>{% end %}
@@ -71,6 +72,8 @@
             </div>
         </div>
     </div>
+    {% block template %}
+    {% end %}
     {% block container %}
     <div id="container">
         <div id="left">
