--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -103,8 +103,7 @@
                 <div id="slider">
                     <ul class="bxslider">
                       <li><img src="../static/img/default.png"/></li>
-                      <li><img src="../static/img/progress.png"/></li>
-                      <li><img src="../static/img/finish.png"/></li>
+                      <li><img src="../static/img/template1.png"/></li>
                     </ul>
                 </div>
             </div>
