--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -102,7 +102,7 @@
                 <label>Template:</label>
                 <div id="slider">
                     <ul class="bxslider">
-                      <li><img src="../static/img/default.png"/></li>
+                      <li><img src="../static/img/template.png"/></li>
                       <li><img src="../static/img/template1.png"/></li>
                     </ul>
                 </div>
