--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -25,7 +25,7 @@
               </code>
               <br>
               <code>
-                极简但富有内涵，原来打包也可以如此美好。
+                极简但富有内涵，原来安装包制作也可以如此美好。
               </code>
             </div>
         </div>
