--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -112,6 +112,9 @@
             <div class="demo-content demo-content-article">
               <div>1.您的 <a href="http://www.7-zip.org/">7z</a> 压缩工具最好使用最新的;</div>
               <div>2.如果<code>Build</code>失败或者是需要重新build,请<code>F5</code>刷新浏览器。</div>
+              <div>
+                3. 您也可以下载<a href="http://pan.baidu.com/s/1hqw0qeK">CloudSetuper</a>进行独立打包，一样的操作，一样的打包。
+              </div>
             </div>
         </div>
         <div class="demo-row">
