--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -44,7 +44,7 @@
               <h3>第一步 上传文件</h3>
             </div>
             <div class="demo-content demo-content-article">
-              <img src="../static/img/uploadhelp.png" style="height: 500px">
+              <img src="../static/img/uploadhelp.png" style="width: 600px">
               <br>
               <code>
                 只需要上传一个7z格式的压缩包和几张介绍你程序的图片即可
@@ -54,7 +54,7 @@
               </div>
               <div>
                 <code>图片：</code> 上传的图片会在如下图片区域定时幻灯片播放
-                <img src="../static/img/default.png" style="height: 500px">
+                <img src="../static/img/default.png" style="width: 600px">
                 <div>
                   建议上传图片尺寸最好在<code>650 * 400</code>左右
                 </div>
@@ -68,7 +68,7 @@
             </div>
             <div class="demo-content demo-content-article">
               <h5>基本信息</h5>
-              <img src="../static/img/custominfohelp.png" style="height: 500px">
+              <img src="../static/img/custominfohelp.png" style="width: 600px">
               <div><code>Software name</code>：软件的名称</div>
               <div><code>Output folder name</code>：程序安装到指定的目录名称</div>
               <div><code>Exe name</code>：程序可执行文件的名称</div>
@@ -81,7 +81,7 @@
               <div><code>Language:：</code>：语言选择（国际化）</div>
               <div>
                 <h5>选择模板</h5>
-                <img src="../static/img/buildhelp.png" style="height: 500px">
+                <img src="../static/img/buildhelp.png" style="width: 600px">
                 <div>
                   <code>我们推出多种不同风格的打包模板，您可以选择您所喜欢的模板进行打包</code>
                 </div>
@@ -100,7 +100,7 @@
               <h3>第三步 下载</h3>
             </div>
             <div class="demo-content demo-content-article">
-              <img src="../static/img/downloadhelp.png">
+              <img src="../static/img/downloadhelp.png" style="width: 600px">
               <div>点击<code>Download</code>按钮即可下载您的安装程序。</div>
             </div>
         </div>
@@ -114,7 +114,9 @@
               <div>2.如果<code>Build</code>失败或者是需要重新build,请<code>F5</code>刷新浏览器。</div>
               <div>
                 3. 您也可以下载<a href="http://pan.baidu.com/s/1hqw0qeK">CloudSetuper桌面版</a>进行独立打包，一样的操作，一样的打包。
-                <img src="../static/img/desktophelp.png" style="height: 500px">
+                <div>
+                <img src="../static/img/desktophelp.png" style="width: 600px">
+                </div>
               </div>
             </div>
         </div>
@@ -123,11 +125,11 @@
               <h3>Demo 演示</h3>
             </div>
             <div class="demo-content demo-content-article">
-              <img src="../static/img/default.png">
+              <img src="../static/img/default.png" style="width: 600px">
               <div style="height: 5px"></div>
-              <img src="../static/img/progress.png">
+              <img src="../static/img/progress.png" style="width: 600px">
               <div style="height: 5px"></div>
-              <img src="../static/img/finish.png">
+              <img src="../static/img/finish.png" style="width: 600px">
             </div>
         </div>
     </div>
