--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -44,7 +44,7 @@
               <h3>第一步 上传文件</h3>
             </div>
             <div class="demo-content demo-content-article">
-              <img src="../static/img/uploadhelp.png" style="width: 600px">
+              <img src="../static/img/uploadhelp.png">
               <br>
               <code>
                 只需要上传一个7z格式的压缩包和几张介绍你程序的图片即可
