--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -41,6 +41,22 @@
 
         <div class="demo-row">
             <div class="demo-title">
+              <h3>功能特性</h3>
+            </div>
+            <div class="demo-content demo-content-article">
+              <div><code>1.</code> 支持原生7z压缩包进行打包，保证安装包体积最小化；</div>
+              <div><code>2.</code> 支持自定义图片上传，你的图片有多炫，你的程序就有多炫；</div>
+              <div><code>3.</code> 支持安装目录自定义；</div>
+              <div><code>4.</code> 支持多语言选择；</div>
+              <div><code>5.</code> 支持生成桌面快捷方式；</div>
+              <div><code>6.</code> 支持安装界面主题背景自定义；</div>
+              <div><code>7.</code> 支持安装界面模板选择；</div>
+              <div><code>8.</code> 更多的特性.....</div>
+            </div>
+        </div>
+
+        <div class="demo-row">
+            <div class="demo-title">
               <h3>第一步 上传文件</h3>
             </div>
             <div class="demo-content demo-content-article">
