--- a/setuper web app/templates/base.html
+++ b/setuper web app/templates/base.html
@@ -32,6 +32,16 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Home</a>
                         </li>
+                        <li><div class="btn-group" style="margin-top: 5px">
+                            <button class="btn btn-inverse dropdown-toggle" type="button" data-toggle="dropdown">
+                            Product <span class="caret"></span>
+                            </button>
+                            <ul id="mainMenu" class="dropdown-menu dropdown-menu-inverse" role="menu">
+                                <li><a href="http://pan.baidu.com/s/1hqw0qeK">CloudSetuper-v1.0.0</a>
+                                </li>
+                            </ul>
+                        </div>
+                        </li>
                         <li><a href="/help">Help</a>
                         </li>
                         <li><a href="/about">About</a>
