--- a/setuper web app/templates/base.html
+++ b/setuper web app/templates/base.html
@@ -37,7 +37,7 @@
                             Product <span class="caret"></span>
                             </button>
                             <ul id="mainMenu" class="dropdown-menu dropdown-menu-inverse" role="menu">
-                                <li><a href="http://pan.baidu.com/s/1hqw0qeK">CloudSetuper-v1.0.0</a>
+                                <li><a href="http://pan.baidu.com/s/1hqw0qeK" target="_blank">CloudSetuper-v1.0.0</a>
                                 </li>
                             </ul>
                         </div>
