--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -18,7 +18,7 @@
             </div>
             <div class="demo-content demo-content-article">
               <p>
-                <code>Cloud setuper </code> 是一款windows上的在线安装包制作工具类似 <a href="http://nsis.sourceforge.net/">NSIS</a> or <a href="http://www.jrsoftware.org/isinfo.php">Inno Setup</a>. 利用它你的安装包程序将拥有更小的体积，更漂亮界面，更高的自定义。 
+                <code>Cloud setuper </code> 是一款windows上的在线安装包制作工具类似 <a href="http://nsis.sourceforge.net/" target="_blank">NSIS</a> or <a href="http://www.jrsoftware.org/isinfo.php" target="_blank">Inno Setup</a>. 利用它你的安装包程序将拥有更小的体积，更漂亮界面，更高的自定义。 
               </p>
               <code>
                 您只需要简单的注册一个帐号即可无限制免费使用。
@@ -129,7 +129,7 @@
               <div>1.您的 <a href="http://www.7-zip.org/">7z</a> 压缩工具最好使用最新的;</div>
               <div>2.如果<code>Build</code>失败或者是需要重新build,请<code>F5</code>刷新浏览器。</div>
               <div>
-                3. 您也可以下载<a href="http://pan.baidu.com/s/1hqw0qeK">CloudSetuper桌面版</a>进行独立打包，一样的操作，一样的打包。
+                3. 您也可以下载<a href="http://pan.baidu.com/s/1hqw0qeK" target="_blank">CloudSetuper桌面版</a>进行独立打包，一样的操作，一样的打包。
                 <div>
                 <img src="../static/img/desktophelp.png" style="width: 600px">
                 </div>
