--- a/setuper web app/templates/base.html
+++ b/setuper web app/templates/base.html
@@ -36,7 +36,7 @@
                             <button class="btn btn-inverse dropdown-toggle" type="button" data-toggle="dropdown">
                             Product <span class="caret"></span>
                             </button>
-                            <ul id="mainMenu" class="dropdown-menu dropdown-menu-inverse" role="menu">
+                            <ul class="dropdown-menu dropdown-menu-inverse" role="menu">
                                 <li><a href="http://pan.baidu.com/s/1hqw0qeK" target="_blank">CloudSetuper-v1.0.0</a>
                                 </li>
                             </ul>
@@ -56,7 +56,7 @@
                                     <button class="btn btn-inverse dropdown-toggle" type="button" data-toggle="dropdown">
                                     {{ username }} <span class="caret"></span>
                                     </button>
-                                    <ul id="mainMenu" class="dropdown-menu dropdown-menu-inverse" role="menu">
+                                    <ul class="dropdown-menu dropdown-menu-inverse" role="menu">
                                         <li><a href="#">User info</a>
                                         </li>
                                         <li><a href="#">Project manager</a>
