--- a/setuper web app/templates/helpcli_zh.html
+++ b/setuper web app/templates/helpcli_zh.html
@@ -6,7 +6,7 @@
 {% end %}
 
 {% block appjs %}
-<script data-main="../static/js/help" src="static/js/lib/require.min.js"></script>
+<script data-main="../static/js/help" src="../static/js/lib/require.min.js"></script>
 {% end %}
 
 {% block container %}
