--- a/setuper web app/static/css/flat-ui-docs.css
+++ b/setuper web app/static/css/flat-ui-docs.css
@@ -125,6 +125,15 @@ ol.linenums {
   text-align: center;
   word-wrap: break-word;
   }
+.demo-headline1 {
+  padding: 40px 0;
+  margin-top: 2px;
+  margin-bottom: 50px;
+  font: 200 60px/1.1 "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  color: #1abc9c;
+  text-align: center;
+  word-wrap: break-word;
+  }
 .demo-row {
   width: 940px;
   padding: 0 20px 50px;
