--- a/setuper web app/templates/base.html
+++ b/setuper web app/templates/base.html
@@ -37,7 +37,9 @@
                             Product <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-inverse" role="menu">
-                                <li><a href="http://pan.baidu.com/s/1sjnu9QX" target="_blank">CloudSetuper-deektop-v1.0.0</a>
+                                <li><a href="/desktop">CloudSetuper Desktop</a>
+                                </li>
+                                <li><a href="cli">CloudSetuper CLI</a>
                                 </li>
                             </ul>
                         </div>
