--- a/setuper web app/templates/base.html
+++ b/setuper web app/templates/base.html
@@ -37,10 +37,13 @@
                             Product <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-inverse" role="menu">
+                                <li><a href="/">CloudSetuper Online</a>
+                                </li>
                                 <li><a href="/desktop">CloudSetuper Desktop</a>
                                 </li>
-                                <li><a href="cli">CloudSetuper CLI</a>
+                                <li><a href="/cli">CloudSetuper CLI</a>
                                 </li>
+                                <li class="divider"></li>
                             </ul>
                         </div>
                         </li>
