--- a/setuper web app/templates/desktop.html
+++ b/setuper web app/templates/desktop.html
@@ -27,7 +27,20 @@
               <h3>基本用法</h3>
             </div>
             <div class="demo-content demo-content-article">
-              <img src="../static/img/desktophelp.png" style="width:600px;">
+                <img src="../static/img/desktophelp.png" style="width:600px;">
+                <br>
+                <br>
+                <div><code>Software name</code>：软件的名称</div>
+                <div><code>Output folder name</code>：程序安装到指定的目录名称</div>
+                <div><code>Exe name</code>：程序可执行文件的名称</div>
+                <div><code>Desktop link name</code>：桌面快捷方式名称</div>
+                <div><code>Software version</code>：软件版本号</div>
+                <div><code>Software author</code>：软件作者</div>
+                <div><code>Email address</code>：邮箱地址</div>
+                <div><code>Company</code>：公司名称</div>
+                <div><code>Desktop link or not：</code>：是否生成桌面快捷方式</div>
+                <div><code>Language:：</code>：语言选择（国际化）</div>
+                <div><code>Theme color:：</code>：程序背景颜色自定义</div>
             </div>
         </div>
     </div>
