--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -14,11 +14,11 @@
     <div class="container">
         <div class="demo-row">
             <div class="demo-title">
-              <h3>cloud setuper</h3>
+              <h3>CloudSetuper</h3>
             </div>
             <div class="demo-content demo-content-article">
               <p>
-                <code>Cloud setuper </code> 是一款windows上的在线安装包制作工具类似 <a href="http://nsis.sourceforge.net/" target="_blank">NSIS</a> or <a href="http://www.jrsoftware.org/isinfo.php" target="_blank">Inno Setup</a>. 利用它你的安装包程序将拥有更小的体积，更漂亮界面，更高的自定义。 
+                <code>CloudSetuper </code> 是一款windows上的安装包制作工具,类似 <a href="http://nsis.sourceforge.net/" target="_blank">NSIS</a> or <a href="http://www.jrsoftware.org/isinfo.php" target="_blank">Inno Setup</a>. 利用它你的安装包程序将拥有更小的体积，更漂亮界面，更高的自定义。 
               </p>
               <code>
                 您只需要简单的注册一个帐号即可无限制免费使用。
@@ -27,6 +27,16 @@
               <code>
                 极简但富有内涵，原来安装包制作也可以如此美好。
               </code>
+            </div>
+        </div>
+        <div class="demo-row">
+            <div class="demo-title">
+              <h3>产品形态</h3>
+            </div>
+            <div class="demo-content demo-content-article">
+              <div><a href="">CloudSetuper Online  </a>在线</div>
+              <div><a href="">CloudSetuper Desktop </a>桌面客户端</div>
+              <div><a href="">CloudSetuper CLI </a>命令行</div>
             </div>
         </div>
 
@@ -95,6 +105,7 @@
               <div><code>Company</code>：公司名称</div>
               <div><code>Desktop link or not：</code>：是否生成桌面快捷方式</div>
               <div><code>Language:：</code>：语言选择（国际化）</div>
+              <div><code>Theme color:：</code>：程序背景颜色自定义</div>
               <div>
                 <h5>选择模板</h5>
                 <img src="../static/img/buildhelp.png" style="width: 600px">
