--- a/setuper web app/templates/admin/base.html
+++ b/setuper web app/templates/admin/base.html
@@ -25,7 +25,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                     </button>
-                    <a class="navbar-brand" href="/">Cloud Setuper</a>
+                    <a class="navbar-brand" href="/admin">Cloud Setuper</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -46,11 +46,11 @@
                             </ul>
                         </div>
                         </li>
-                        <li><a href="/help">Help</a>
+                        <li><a href="/admin/users">User</a>
                         </li>
-                        <li><a href="/about">About</a>
+                        <li><a href="/admin/statistics">Statistics</a>
                         </li>
-                        <li><a href="/contact">Contact</a>
+                        <li><a href="/admin/release">Release</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
