--- a/setuper web app/templates/admin/statistics.html
+++ b/setuper web app/templates/admin/statistics.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block appjs %}
-<script data-main="{{ static_url("js/admin/index") }}" src="{{ static_url("js/lib/require.min.js") }}"></script>
+<script data-main="{{ static_url("js/admin/statistics") }}" src="{{ static_url("js/lib/require.min.js") }}"></script>
 {% end %}
 
 {% block Sign %}
@@ -9,6 +9,6 @@
 
 {% block container %}
 <div class="container">
-    index
+    statictis
 </div>
 {% end %}
