--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -34,9 +34,9 @@
               <h3>产品形态</h3>
             </div>
             <div class="demo-content demo-content-article">
-              <div><a href="">CloudSetuper Online  </a>在线</div>
-              <div><a href="">CloudSetuper Desktop </a>桌面客户端</div>
-              <div><a href="">CloudSetuper CLI </a>命令行</div>
+              <div><a href="/online">CloudSetuper Online  </a>在线</div>
+              <div><a href="/desktop">CloudSetuper Desktop </a>桌面客户端</div>
+              <div><a href="/cli">CloudSetuper CLI </a>命令行</div>
             </div>
         </div>
 
