--- a/setuper web app/templates/admin/base.html
+++ b/setuper web app/templates/admin/base.html
@@ -36,11 +36,11 @@
                             Product <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-inverse" role="menu">
-                                <li><a href="/admin/online">CloudSetuper Online</a>
+                                <li><a href="/online">CloudSetuper Online</a>
                                 </li>
-                                <li><a href="/admin/desktop">CloudSetuper Desktop</a>
+                                <li><a href="/desktop">CloudSetuper Desktop</a>
                                 </li>
-                                <li><a href="/admin/cli">CloudSetuper CLI</a>
+                                <li><a href="/cli">CloudSetuper CLI</a>
                                 </li>
                                 <li class="divider"></li>
                             </ul>
