--- a/setuper web app/templates/help_zh.html
+++ b/setuper web app/templates/help_zh.html
@@ -61,7 +61,8 @@
               <div><code>5.</code> 支持生成桌面快捷方式；</div>
               <div><code>6.</code> 支持安装界面主题背景自定义；</div>
               <div><code>7.</code> 支持安装界面模板选择；</div>
-              <div><code>8.</code> 更多的特性.....</div>
+              <div><code>8.</code> 支持自带卸载程序；</div>
+              <div><code>9.</code> 更多的特性.....</div>
             </div>
         </div>
 
